with haszel cast experiments