@@ -5,6 +5,35 @@ scalaVersion := "2.11.7"
 
 scalacOptions := Seq("-unchecked", "-deprecation", "-encoding", "utf8")
 
+fork := true
+javaOptions in run ++= Seq(
+ "-Xms2g",
+ "-Xmx2g",
+ "-Xmn1000m",
+// "-XX:GCTimeRatio=50",
+// "-XX:SurvivorRatio=4",
+ "-XX:+UseConcMarkSweepGC",
+ "-XX:+UseParNewGC",
+ "-XX:+CMSParallelRemarkEnabled",
+ "-XX:+ScavengeBeforeFullGC",
+ "-XX:+CMSScavengeBeforeRemark",
+ "-XX:+ExplicitGCInvokesConcurrent",
+ "-XX:+CMSClassUnloadingEnabled",
+ "-XX:+UseCMSInitiatingOccupancyOnly",
+ "-XX:CMSInitiatingOccupancyFraction=80",
+ "-XX:ParallelGCThreads=4",
+ "-XX:+AggressiveOpts",
+ "-XX:+OptimizeStringConcat",
+ "-XX:+UseFastAccessorMethods",
+ "-Dcom.sun.management.jmxremote.port=2555",
+ "-Dcom.sun.management.jmxremote.authenticate=false",
+ "-Dcom.sun.management.jmxremote.ssl=false",
+ "-Djava.net.preferIPv4Stack=true",
+ "-Djava.net.preferIPv6Addresses=false",
+ "-Dhazelcast.jmx=true"
+)
+
+
 libraryDependencies ++= Seq(
   "fr.janalyse"         %% "primes"                               % "1.2.2-SNAPSHOT",
   "fr.janalyse"         %% "unittools"                            % "0.2.7-SNAPSHOT",
@@ -13,6 +42,7 @@ libraryDependencies ++= Seq(
   "com.mchange"          % "c3p0"                                 % "0.9.2.1",
   "net.sf.ehcache"       % "ehcache-core"                         % "2.6.11",
   "javax.transaction"    % "jta"                                  % "1.1", // required for ehcache
+  "com.hazelcast"         % "hazelcast"                           % "3.6.1", // objects cache alternative
   "mysql"                % "mysql-connector-java"                 % "5.1.36",
   "ch.qos.logback"       % "logback-classic"                      % "1.1.3",
   "org.codehaus.janino"  % "janino"                               % "2.7.8" // Allow logback config file conditionals
